--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -32,6 +32,45 @@ Total population according to the 2000 census is 7,501, an increase of 14% since
   caption="Loring Park in 2025"
 />
 
+## Trial
+
+## The Loring Park Transformation
+
+<div style={{ display: 'flex', flexDirection: 'row', flexWrap: 'wrap', gap: '20px', margin: '40px 0' }}>
+  
+  {/* Left Side: Sticky Visuals */}
+  <div style={{ flex: '1 1 300px', position: 'sticky', top: '20px', height: '400px', display: 'flex', flexDirection: 'column', alignItems: 'center', justifyContent: 'center' }}>
+    <div style={{ 
+      width: '250px', 
+      height: '250px', 
+      borderRadius: '50%', 
+      background: 'conic-gradient(#A6611A 0% 70%, #DFC27D 70% 100%)',
+      transition: 'all 0.5s ease',
+      boxShadow: '0 10px 30px rgba(0,0,0,0.1)'
+    }}>
+      {/* This circle stays here as the user scrolls */}
+    </div>
+    <p style={{ marginTop: '20px', fontWeight: 'bold', color: '#A6611A' }}>1970s Baseline</p>
+  </div>
+
+  {/* Right Side: Scrolling Narrative */}
+  <div style={{ flex: '1 1 300px' }}>
+    <div style={{ height: '300px', padding: '20px', marginBottom: '100px', background: '#f8fafc', borderRadius: '8px' }}>
+      <h4>1971: The Legislation</h4>
+      <p>The Minnesota State Legislature enacted the enabling legislation for the Loring Park Development District, authorizing tax increment financing.</p>
+    </div>
+
+    <div style={{ height: '300px', padding: '20px', marginBottom: '100px', background: '#f1f5f9', borderRadius: '8px', borderLeft: '4px solid #A6611A' }}>
+      <h4>1973: The Design Plan</h4>
+      <p>M. Paul Friedberg and Associates published the Urban Design Plan, setting the stage for the physical transformation of the park area.</p>
+    </div>
+
+    <div style={{ height: '300px', padding: '20px', marginBottom: '100px', background: '#018571', color: '#fff', borderRadius: '8px' }}>
+      <h4>2020: Modern Density</h4>
+      <p>Today, the district has reached a population of 9,718, fulfilling the high-density vision established fifty years prior.</p>
+    </div>
+  </div>
+</div>
 
 ## Experimenting with a bar graph
 
