--- a/content/trial/index.mdx
+++ b/content/trial/index.mdx
@@ -1,1 +1,9 @@
 
+<Interstitials.Hero
+  headline="Plan your visit"
+  description="Preview your favorites, bookmark upcoming tours, and read the latest from the archives."
+  links={[{ title: 'Browse works', href: '/works' }]}
+/>
+
+
+<Container>
