--- a/content/trial/index.mdx
+++ b/content/trial/index.mdx
@@ -51,4 +51,4 @@ title: Loring Park Neighborhood
       {/* 1970s Section */}
       <div style={{ height: '600px', display: 'flex', alignItems: 'center
 
-<\Container>
+</Container>
