--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -110,6 +110,114 @@ Total population according to the 2000 census is 7,501, an increase of 14% since
   </div>
 </div>
 
+## Exp v2
+<div style={{ margin: '60px 0', fontFamily: 'serif' }}>
+  
+  <div style={{ position: 'relative', height: '1600px' }}>
+    
+    {/* STICKY GRAPH CONTAINER */}
+    <div style={{ 
+      position: 'sticky', 
+      top: '150px', 
+      height: '400px', 
+      width: '100%', 
+      display: 'flex', 
+      flexDirection: 'column', 
+      alignItems: 'center', 
+      justifyContent: 'center',
+      zIndex: 1 
+    }}>
+      
+      {/* The Chart Area */}
+      <div style={{ position: 'relative', width: '200px', height: '300px', borderBottom: '2px solid #cbd5e1' }}>
+        
+        {/* BACKGROUND BAR (1970s - Small/Brown) */}
+        <div style={{ 
+          position: 'absolute', 
+          bottom: '0', 
+          left: '50%', 
+          transform: 'translateX(-50%)', 
+          width: '80px', 
+          height: '40px', 
+          backgroundColor: '#A6611A', 
+          borderRadius: '4px 4px 0 0' 
+        }}>
+          <span style={{ position: 'absolute', top: '-25px', width: '100%', textAlign: 'center', fontSize: '12px', color: '#A6611A', fontWeight: 'bold' }}>1,387</span>
+        </div>
+
+        {/* FOREGROUND BAR (2020s - Tall/Teal) */}
+        {/* This bar is "revealed" as the user scrolls past the container */}
+        <div style={{ 
+          position: 'absolute', 
+          bottom: '0', 
+          left: '50%', 
+          transform: 'translateX(-50%)', 
+          width: '80px', 
+          height: '280px', 
+          backgroundColor: '#018571', 
+          borderRadius: '4px 4px 0 0',
+          clipPath: 'inset(100% 0 0 0)', /* Hidden by default */
+          zIndex: 2
+        }}>
+           <span style={{ position: 'absolute', top: '-25px', width: '100%', textAlign: 'center', fontSize: '12px', color: '#018571', fontWeight: 'bold' }}>9,718</span>
+        </div>
+
+      </div>
+      <p style={{ marginTop: '20px', fontSize: '14px', color: '#64748b' }}>Evolution of District Population</p>
+    </div>
+
+    {/* SCROLLING NARRATIVE TRIGGERS */}
+    <div style={{ position: 'relative', zIndex: 3 }}>
+      
+      {/* Start State */}
+      <div style={{ height: '700px', display: 'flex', alignItems: 'flex-start' }}>
+        <div style={{ background: '#fff', padding: '20px', borderRadius: '8px', boxShadow: '0 4px 12px rgba(0,0,0,0.1)', maxWidth: '250px', borderLeft: '4px solid #A6611A' }}>
+          <h4 style={{ color: '#A6611A', marginTop: '0' }}>1970s Baseline</h4>
+          <p style={{ fontSize: '14px', margin: '0' }}>Before the redevelopment, Loring Park was a low-density residential district.</p>
+        </div>
+      </div>
+
+      {/* The "Growth" Trigger */}
+      {/* As this div scrolls up, it reveals the teal bar */}
+      <div style={{ height: '900px', display: 'flex', alignItems: 'center', justifyContent: 'flex-end' }}>
+        <div style={{ 
+          background: '#018571', 
+          color: '#fff', 
+          padding: '20px', 
+          borderRadius: '8px', 
+          maxWidth: '250px',
+          boxShadow: '0 10px 20px rgba(1, 133, 113, 0.2)'
+        }}>
+          <h4 style={{ marginTop: '0' }}>2020: The Modern Era</h4>
+          <p style={{ fontSize: '14px', margin: '0' }}>Today, the population has grown by over 600%, transforming the skyline.</p>
+        </div>
+      </div>
+
+    </div>
+
+    {/* THE MAGIC OVERLAY: This div moves with the scroll to reveal the teal graph */}
+    <div style={{ 
+      position: 'absolute', 
+      top: '700px', 
+      left: 0, 
+      width: '100%', 
+      height: '100%', 
+      background: 'transparent', 
+      backdropFilter: 'none',
+      zIndex: 5
+    }}>
+      <style>{`
+        /* When this area is in view, we reveal the Teal Bar */
+        @supports (clip-path: inset(0)) {
+          .reveal-trigger:hover ~ .chart-area .teal-bar { clip-path: inset(0 0 0 0); }
+        }
+      `}</style>
+    </div>
+
+  </div>
+</div>
+
+
 ## Experimenting with a bar graph
 
 We can use something like this for our collection, e.g. to say: of our 144 documents 20% of documents relate to housing, 20% to atmosphere pollution. 
