--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -238,6 +238,42 @@ We can use something like this for our collection, e.g. to say: of our 144 docum
   </div>
 </div>
 
+## Experimenting with a bar graph!
+
+<div>
+  {/* Category A: Housing */}
+  <div style={{ marginBottom: '20px' }}>
+    <strong>Housing (20%)</strong>
+    <div style={{ width: '100%', backgroundColor: '#e2e8f0', height: '24px', borderRadius: '4px', marginTop: '4px' }}>
+      <div style={{ width: '20%', backgroundColor: '#1e293b', height: '100%', borderRadius: '4px' }}></div>
+    </div>
+  </div>
+
+  {/* Category B: Atmosphere Pollution */}
+  <div style={{ marginBottom: '20px' }}>
+    <strong>Atmosphere Pollution (20%)</strong>
+    <div style={{ width: '100%', backgroundColor: '#e2e8f0', height: '24px', borderRadius: '4px', marginTop: '4px' }}>
+      <div style={{ width: '20%', backgroundColor: '#fda4af', height: '100%', borderRadius: '4px' }}></div>
+    </div>
+  </div>
+
+  {/* Category C: Example (85%) */}
+  <div style={{ marginBottom: '20px' }}>
+    <strong>Category C (85%)</strong>
+    <div style={{ width: '100%', backgroundColor: '#e2e8f0', height: '24px', borderRadius: '4px', marginTop: '4px' }}>
+      <div style={{ width: '85%', backgroundColor: '#94a3b8', height: '100%', borderRadius: '4px' }}></div>
+    </div>
+  </div>
+
+  {/* Category D: Example (60%) */}
+  <div style={{ marginBottom: '20px' }}>
+    <strong>Category D (60%)</strong>
+    <div style={{ width: '100%', backgroundColor: '#e2e8f0', height: '24px', borderRadius: '4px', marginTop: '4px' }}>
+      <div style={{ width: '60%', backgroundColor: '#2563eb', height: '100%', borderRadius: '4px' }}></div>
+    </div>
+  </div>
+</div>
+
 ## experimenting with bar graph (round 2) 
 
 <div className="my-12 max-w-3xl border-l-2 border-gray-200 pl-6">
