--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -3,7 +3,7 @@ title: Loring Park Neighborhood
 ---
 
 <Interstitials.Hero
-  headline="Plan your visit"
+  headline="Welcome to the EIS Document on the Loring Park Redevelopment District "
   description="Preview your favorites, bookmark upcoming tours, and read the latest from the archives."
   links={[{ title: 'Browse works', href: '/works' }]}
 />
@@ -245,31 +245,32 @@ We can use something like this for our collection, e.g. to say: of our 144 docum
   <div style={{ marginBottom: '20px' }}>
     <strong>Housing (20%)</strong>
     <div style={{ width: '100%', backgroundColor: '#e2e8f0', height: '24px', borderRadius: '4px', marginTop: '4px' }}>
-      <div style={{ width: '20%', backgroundColor: '#1e293b', height: '100%', borderRadius: '4px' }}></div>
+      <div style={{ width: '20%', backgroundColor: '#c59d8e', height: '100%', borderRadius: '4px' }}></div>
     </div>
   </div>
 
   {/* Category B: Atmosphere Pollution */}
   <div style={{ marginBottom: '20px' }}>
-    <strong>Atmosphere Pollution (20%)</strong>
+    <strong>Atmosphere Pollution (30%)</strong>
     <div style={{ width: '100%', backgroundColor: '#e2e8f0', height: '24px', borderRadius: '4px', marginTop: '4px' }}>
-      <div style={{ width: '20%', backgroundColor: '#fda4af', height: '100%', borderRadius: '4px' }}></div>
+      <div style={{ width: '30%', backgroundColor: '#d3e4f0', height: '100%', borderRadius: '4px' }}></div>
     </div>
   </div>
 
-  {/* Category C: Example (85%) */}
+  {/* Category C: Industrial */}
   <div style={{ marginBottom: '20px' }}>
-    <strong>Category C (85%)</strong>
+    <strong>Industrial (40%)</strong>
     <div style={{ width: '100%', backgroundColor: '#e2e8f0', height: '24px', borderRadius: '4px', marginTop: '4px' }}>
-      <div style={{ width: '85%', backgroundColor: '#94a3b8', height: '100%', borderRadius: '4px' }}></div>
+      <div style={{ width: '40%', backgroundColor: '#abc4f3', height: '100%', borderRadius: '4px' }}></div>
     </div>
   </div>
 
-  {/* Category D: Example (60%) */}
+  {/* Category D: Other */}
   <div style={{ marginBottom: '20px' }}>
-    <strong>Category D (60%)</strong>
+    <strong>Other (10%)</strong>
     <div style={{ width: '100%', backgroundColor: '#e2e8f0', height: '24px', borderRadius: '4px', marginTop: '4px' }}>
-      <div style={{ width: '60%', backgroundColor: '#2563eb', height: '100%', borderRadius: '4px' }}></div>
+      <div style={{ width: '100%', backgroundColor: '#e2e8f0', height: '24px', borderRadius: '4px', marginTop: '4px' }}>
+      <div style={{ width: '10%', backgroundColor: '#fceecb', height: '100%', borderRadius: '4px' }}></div>
     </div>
   </div>
 </div>
