--- a/content/trial/index.mdx
+++ b/content/trial/index.mdx
@@ -3,7 +3,7 @@ title: Loring Park Neighborhood
 ---
 
 <Interstitials.Hero
-  headline="Plan your visit"
+  headline="Welcome to the EIS Document on the Loring Park Redevelopment District "
   description="Preview your favorites, bookmark upcoming tours, and read the latest from the archives."
   links={[{ title: 'Browse works', href: '/works' }]}
 />
@@ -11,4 +11,39 @@ title: Loring Park Neighborhood
 
 <Container>
 
-</Container>
+## This subpage is a bunch of experimentations for visualization of EIS documents data
+
+## Demographics 
+
+* population in 1970 (incl. areas not subject to redevelopment) was 1387 (from EIS document)
+* in re-developable portion of the district was about 1000
+* population in 1960 was 1968 (from EIS document)
+* Total population according to the 2000 census is 7,501, an increase of 14% since 1990
+* 2020 population: 9,718 (source: Wikipedia)
+
+<Image
+  src="https://upload.wikimedia.org/wikipedia/commons/9/9d/Loring_Park._%28May_12%2C_2025%29.jpg"
+  alt="this is a test"
+  caption="Loring Park in 2025"
+/>
+
+## exp 
+
+<div style={{ margin: '60px 0', fontFamily: 'serif' }}>
+  <div style={{ position: 'relative', height: '1500px', display: 'flex', flexDirection: 'column' }}>
+    <div style={{ 
+      position: 'sticky', 
+      top: '20%', 
+      height: '400px', 
+      display: 'flex', 
+      flexDirection: 'column', 
+      alignItems: 'center', 
+      justifyContent: 'flex-end',
+      zIndex: 1 
+    }}>
+      <div style={{ display: 'flex', alignItems: 'flex-end', gap: '40px', height: '250px', borderBottom: '2px solid #cbd5e1', padding: '0 40px' }}>
+        <div style={{ display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
+          <div style={{ 
+            width: '80px', 
+            height: '220px', 
+            background: 'linear-
