--- a/content/trial/index.mdx
+++ b/content/trial/index.mdx
@@ -13,6 +13,74 @@ title: Loring Park Neighborhood
 
 ## This subpage is a bunch of experimentations for visualization of EIS documents data
 
+## helloooo
+<div style={{ margin: '60px 0', fontFamily: 'serif' }}>
+  <div style={{ position: 'relative', height: '2400px' }}>
+    
+    {/* STICKY CONTAINER: This stays on screen */}
+    <div style={{ 
+      position: 'sticky', 
+      top: '150px', 
+      height: '400px', 
+      display: 'flex', 
+      flexDirection: 'column', 
+      alignItems: 'center', 
+      justifyContent: 'center'
+    }}>
+      <div style={{ position: 'relative', width: '200px', height: '300px', borderBottom: '2px solid #cbd5e1' }}>
+        
+        {/* 1960 Bar (Always Visible) */}
+        <div style={{ position: 'absolute', bottom: '0', left: '10px', width: '40px', height: '57px', backgroundColor: '#93c5fd', borderRadius: '4px 4px 0 0' }}>
+          <span style={{ position: 'absolute', top: '-20px', width: '100%', textAlign: 'center', fontSize: '10px', fontWeight: 'bold' }}>1,968</span>
+        </div>
+
+        {/* 1970 Bar (Always Visible) */}
+        <div style={{ position: 'absolute', bottom: '0', left: '60px', width: '40px', height: '40px', backgroundColor: '#A6611A', borderRadius: '4px 4px 0 0' }}>
+          <span style={{ position: 'absolute', top: '-20px', width: '100%', textAlign: 'center', fontSize: '10px', fontWeight: 'bold' }}>1,387</span>
+        </div>
+
+        {/* 2000 Bar (Always Visible) */}
+        <div style={{ position: 'absolute', bottom: '0', left: '110px', width: '40px', height: '216px', backgroundColor: '#3b82f6', borderRadius: '4px 4px 0 0' }}>
+          <span style={{ position: 'absolute', top: '-20px', width: '100%', textAlign: 'center', fontSize: '10px', fontWeight: 'bold' }}>7,501</span>
+        </div>
+
+        {/* 2020 Bar (Always Visible) */}
+        <div style={{ position: 'absolute', bottom: '0', left: '160px', width: '40px', height: '280px', backgroundColor: '#018571', borderRadius: '4px 4px 0 0' }}>
+          <span style={{ position: 'absolute', top: '-20px', width: '100%', textAlign: 'center', fontSize: '10px', fontWeight: 'bold' }}>9,718</span>
+        </div>
+
+      </div>
+      <p style={{ marginTop: '20px', fontSize: '14px', color: '#64748b' }}>Loring Park Population Growth</p>
+    </div>
+
+    {/* SCROLLING TEXT: These move while the graph stays stuck */}
+    <div style={{ position: 'relative', zIndex: 2 }}>
+      
+      <div style={{ height: '600px', padding: '20px' }}>
+        <div style={{ maxWidth: '280px', background: '#fff', padding: '20px', borderLeft: '4px solid #A6611A', boxShadow: '0 4px 12px rgba(0,0,0,0.1)' }}>
+          <h4 style={{ color: '#A6611A', marginTop: '0' }}>1960–1970</h4>
+          <p style={{ fontSize: '14px', margin: '0' }}>A period of clearing: population dips as redevelopment preparations begin.</p>
+        </div>
+      </div>
+
+      <div style={{ height: '600px', padding: '20px', display: 'flex', justifyContent: 'flex-end' }}>
+        <div style={{ maxWidth: '280px', background: '#fff', padding: '20px', borderRight: '4px solid #3b82f6', boxShadow: '0 4px 12px rgba(0,0,0,0.1)' }}>
+          <h4 style={{ color: '#3b82f6', marginTop: '0' }}>2000</h4>
+          <p style={{ fontSize: '14px', margin: '0' }}>Rapid expansion: new high-density residential towers redefine the skyline.</p>
+        </div>
+      </div>
+
+      <div style={{ height: '600px', padding: '20px' }}>
+        <div style={{ maxWidth: '280px', background: '#018571', color: '#fff', padding: '20px', boxShadow: '0 10px 20px rgba(1,133,113,0.2)' }}>
+          <h4 style={{ marginTop: '0', color: '#fff' }}>2020</h4>
+          <p style={{ fontSize: '14px', margin: '0' }}>The modern peak: Loring Park becomes one of the densest neighborhoods in the city.</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
 ## Demographics 
 
 * population in 1970 (incl. areas not subject to redevelopment) was 1387 (from EIS document)
