new exhibition thing

--- a/content/_app.mdx
+++ b/content/_app.mdx
@@ -31,6 +31,7 @@ export function App({children}) {
           {href: "/hana", label: "Hana"},
           {href: "/Bea", label: "Bea"},
           {href: "/liana", label: "Liana"},
+          {href: "/exhibition", label: "Exhibition"}
           {href: "/trial", label: "Trial"},
         ]}
         title="EIS Demo"
