--- a/content/liana/index.mdx
+++ b/content/liana/index.mdx
@@ -217,6 +217,62 @@ Total population according to the 2000 census is 7,501, an increase of 14% since
   </div>
 </div>
 
+## hello! 
+
+<div style={{ margin: '40px 0', fontFamily: 'serif' }}>
+  <h3 style={{ marginBottom: '20px' }}>Loring Park Population Growth</h3>
+  
+  <div style={{ position: 'relative', height: '1800px' }}>
+    
+    {/* STICKY CONTAINER */}
+    <div style={{ position: 'sticky', top: '100px', height: '300px', display: 'flex', alignItems: 'flex-end', justifyContent: 'center', gap: '10px', borderBottom: '2px solid grey' }}>
+      
+      {/* 1960 */}
+      <div style={{ width: '40px', height: '57px', backgroundColor: '#93c5fd' }}>
+        <div style={{ fontSize: '10px', textAlign: 'center', marginTop: '-20px' }}>1,968</div>
+      </div>
+
+      {/* 1970 */}
+      <div style={{ width: '40px', height: '40px', backgroundColor: '#A6611A' }}>
+        <div style={{ fontSize: '10px', textAlign: 'center', marginTop: '-20px' }}>1,387</div>
+      </div>
+
+      {/* 2000 */}
+      <div style={{ width: '40px', height: '216px', backgroundColor: '#3b82f6' }}>
+        <div style={{ fontSize: '10px', textAlign: 'center', marginTop: '-20px' }}>7,501</div>
+      </div>
+
+      {/* 2020 */}
+      <div style={{ width: '40px', height: '280px', backgroundColor: '#018571' }}>
+        <div style={{ fontSize: '10px', textAlign: 'center', marginTop: '-20px' }}>9,718</div>
+      </div>
+
+    </div>
+
+    {/* SCROLLING NARRATIVE */}
+    <div style={{ position: 'relative' }}>
+      <div style={{ height: '600px', paddingTop: '50px' }}>
+        <div style={{ maxWidth: '200px', padding: '15px', border: '1px solid #A6611A' }}>
+          <strong>1960-1970</strong>: The dip before the redevelopment began.
+        </div>
+      </div>
+
+      <div style={{ height: '600px', display: 'flex', justifyContent: 'flex-end' }}>
+        <div style={{ maxWidth: '200px', padding: '15px', border: '1px solid #3b82f6' }}>
+          <strong>2000</strong>: High-density growth begins.
+        </div>
+      </div>
+
+      <div style={{ height: '600px' }}>
+        <div style={{ maxWidth: '200px', padding: '15px', border: '1px solid #018571', background: '#018571', color: 'white' }}>
+          <strong>2020</strong>: The modern peak of the Loring Park district.
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
 ## experimenting with a text data table  
 
 <div className="my-12 max-w-3xl border-l-2 border-gray-200 pl-6">
