--- a/content/Exhibition/index.mdx
+++ b/content/Exhibition/index.mdx
@@ -1,39 +1,38 @@
----
-title: Bea's page
-description: Bea's take on a Loring Park, MN EIS!
-image: https://iiif.dc.library.northwestern.edu/iiif/3/0d1d28b9-d0d9-4e47-b55c-b1c48c754dc6/full/3000,/0/default.jpg
-referencedManifests:
-  - https://api.dc.library.northwestern.edu/api/v2/works/2b36982f-0ab3-43ef-a590-c2144b815bf9?as=iiif
-  - https://api.dc.library.northwestern.edu/api/v2/works/01b6796e-1cbf-4c98-a651-5bcd07a3e95d?as=iiif
----
-
-import {CanopyDiagram} from "@canopy-iiif/app/ui/server";
-
-# Loring 100 Apartments
-## Loring Park Development District
-### Minneapolis, Minnesota
-
-<iframe src="https://dc.library.northwestern.edu/embedded-viewer/https%3A%2F%2Fapi.dc.library.northwestern.edu%2Fapi%2Fv2%2Fworks%2F2b36982f-0ab3-43ef-a590-c2144b815bf9%3Fas%3Diiif" title="Loring Park Development District, Loring 100 apartments : environmental impact statement." width="100%" height="800"></iframe>
-
-## Loring Park, Minnesota
-
-The Loring Park Development will provide a **major new residential complex** within very convenient access to the full range of urban services and ameneties. It also will create a major new hotel/convention center, and will provide coherence of design to the nine-block project area. The major environmental costs of the development will be the **substantial demolition of existing business and residential structures,** with the attendant **displacement of the indigenous population;** the vacation of streets for the greenway construction, which will result in increased traffic congestion and air/noise pollution problems; creation of short-term noise, dust and disruption of pedestrian and vehicular traffic associated with construction activities; erection of tall and massive structures which create the potential for adverse shadow and wind effects; and concentration of the population with attendant increases in demand for local and urban facilities and services. 
-
-## Description of the proposed action
-
-Sample [hyperlink](https://google.com) is here. The <abbr title="Environmental Impact Statement">EIS</abbr> was required before approval.
-
-## Involved Agencies
-
-### Part I. 
-"Since the proposed project has already entailed substantial demolition of indigenous structures (about 46 buildings, or approximately 70% of the entire demolition workload, has already been completed), a description of the neighborhood that is giving way to this development will be described in some detail," 
-
-By the 1970s, the Minnesotan Indigenous population had risen to TKTK[^1]%. The tribes of the Ojibwe, Potawatomi, Miami and Hochunk nations were all present.
- 
-[^1]: TK Author, _Sample Source_, TK.
-
 <Image
-  src="https://iiif.dc.library.northwestern.edu/iiif/3/0d1d28b9-d0d9-4e47-b55c-b1c48c754dc6/full/3000,/0/default.jpg"
+  src="https://iiif.dc.library.northwestern.edu/iiif/3/138a94b0-175a-4152-98c7-df58661ce7d5"
+  isTiledImage={true}
+  height="500px"
+  alt="Painting of the The town & pass of Boondi, in Rajpootana"
+  caption="The town & pass of Boondi, in Rajpootana - Situated on a southern slope of a hill at the end of a long range, the town of Boondi was the capital of the Rajput principality of that name. The palace of the Raja is a large masonry stone building about half way up the hill, according to Grindlay, with a kind of fortification extending to the top."
+  annotations={[
+        {
+          annotation: {
+            id: "https://iiif.dc.library.northwestern.edu/iiif/3/f7409acd-e3f9-496a-b733-81f46d4ffa4f/annotation/0",
+            type: "Annotation",
+            motivation: ["tagging"],
+            body: [
+              {
+                id: "https://iiif.dc.library.northwestern.edu/iiif/3/f7409acd-e3f9-496a-b733-81f46d4ffa4f/annotation/0/body/0",
+                type: "TextualBody",
+                value: "Five individuals traveling.",
+              },
+            ],
+            target: {
+              type: "SpecificResource",
+              source: {
+                id: "https://iiif.dc.library.northwestern.edu/iiif/3/f7409acd-e3f9-496a-b733-81f46d4ffa4f/canvas/1",
+                type: "Canvas",
+              },
+              selector: {
+                type: "FragmentSelector",
+                value: "xywh=1900,4050,1500,1000",
+              },
+            },
+          },
+          targetIndex: 0,
+        }
+      ]}
+
 />
 
-## Public Comment
+<Viewer iiifContent="https://api.dc.library.northwestern.edu/api/v2/works/0b2b8793-d4c7-4a55-8b53-61bfc54bc908?as=iiif" />
